[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water_bridges-nw"
version = "0.1.0"
description = "A hybrid algorithm for open-ended, water-mediated hydrogen-bond network detection."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "MDAnalysis>=2.0.0",
    "networkx>=2.0",
    "numpy>=1.20.0",
    "scipy>=1.5.0"
]

[project.scripts]
water_bridges_nw = "water_bridges_nw.cli:main"
